--- a/_posts/2014-11-30-brew-zsh.md
+++ b/_posts/2014-11-30-brew-zsh.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Make zsh deafault shell
+title: Make zsh default shell
 ---
 
 <a title="homebrew" href="http://brew.sh/index_ja.html" target="_blank">homebrew</a>インストールと<a title="zsh" href="https://github.com/zsh-users/zsh" target="_blank">zsh</a>をログインシェルに!
